Fix LaTeX compilation: add theorem environment definition

--- a/paper/EDEN_IACR_Paper.tex
+++ b/paper/EDEN_IACR_Paper.tex
@@ -6,6 +6,8 @@
 \usepackage{hyperref}
 \usepackage{cite}
 
+\newtheorem{theorem}{Theorem}[section]
+
 \title{ÉDEN: Efficient Decimal-aware Exploration for Numerics\\
 \large High-Throughput Prime Generation via Decimal-Aware Wheel Sieves and Auditable Cryptographic Provenance}
 
